almost finished. Changed some styles. To do cart page.

--- a/cart.html
+++ b/cart.html
@@ -108,10 +108,10 @@
 				        		<div class="cart-panel-body">
 				        			<ul class="cart-product">
 				        				<li class="cart-product-img">
-				        					<img src="" alt="">
+				        					<img src="" alt="some image">
 				        				</li>
 				        				<li class="cart-product-description">
-				        					<h2>OG SCALLOP SOLID</h2>
+				        					<a class="cart-product-name" href="#">OG SCALLOP SOLID</a>
 				        					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
 				        					<ul class="cart-product-social">
 				        						<li><a class="fa fa-facebook" href="#"></a></li>
@@ -124,20 +124,20 @@
 				        				</li>
 				        				<li class="cart-product-total">
 				        					<button class="total-decrease"></button>
-				        					<input type="text" value="1">
+				        					<input type="text" value="1" />
 				        					<button class="total-increase"></button>
 				        				</li>
 				        				<li class="cart-product-subtotal">
 				        					<p class="shop-price">749.50</p>
-				        					<button class="cart-product-close" href=""></button>
+				        					<button class="cart-product-close" href="#"></button>
 				        				</li>
 				        			</ul>
 				        			<ul class="cart-product">
 				        				<li class="cart-product-img">
-				        					<img src="" alt="">
+				        					<img src="" alt="some image" />
 				        				</li>
 				        				<li class="cart-product-description">
-				        					<h2>OG SCALLOP SOLID</h2>
+				        					<a class="cart-product-name" href="#">OG SCALLOP SOLID</a>
 				        					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
 				        					<ul class="cart-product-social">
 				        						<li><a class="fa fa-facebook" href="#"></a></li>
@@ -150,20 +150,38 @@
 				        				</li>
 				        				<li class="cart-product-total">
 				        					<button class="total-decrease"></button>
-				        					<input type="text" value="1">
+				        					<input type="text" value="1" />
 				        					<button class="total-increase"></button>
 				        				</li>
 				        				<li class="cart-product-subtotal">
 				        					<p class="shop-price">749.50</p>
-				        					<button class="cart-product-close" href=""></button>
+				        					<button class="cart-product-close" href="#"></button>
 				        				</li>
 				        			</ul>
 				        		</div>
+				        		<div class="product-coupon">
+					        		<h3>Have you got a coupon code?</h3>
+					        		<input type="text" placeholder="INSERT CODE" />
+					        		<span class="f-right">
+					        			<button>Update shopping cart</button>
+					        			<a class="product-coupon-link" href="#">or continue shopping</a>
+					        		</span>
+					        	</div>
 				        	</div>
-				        	<div class="checkout f-right"></div>
+				        	<div class="checkout f-right">
+				        		<h3>Review your cart</h3>
+				        		<ul class="checkout-info">
+					        		<li>Your cart <span class="shop-price">1,399.50</span></li>
+					        		<li>Shipping <span>Free</span></li>
+					        		<li>vat <span class="shop-price">112.20</span></li>
+					        		<li class="checkout-order">Order total <span class="shop-price">1,511.70</span></li>
+					        	</ul>
+				        		<button class="checkout-button">Checkout</button>
+				        	</div>
 				        </div>
 				        <div class="basket-tab hidden"></div>
 				        <div class="basket-tab hidden"></div>
+				        <div class="line"></div>
 			        </div>
 					<div class="shop clearfix">
 						<section class="also-like">
@@ -172,7 +190,7 @@
 								<figure class="shop-item mark">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_09.jpg" alt="">
+											<img src="img/cart_09.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Sleeve spring suit</p>
@@ -185,7 +203,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
@@ -199,7 +217,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -212,7 +230,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -234,7 +252,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Oq scallop solid</p>
@@ -247,7 +265,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_12.jpg" alt="">
+											<img src="img/cart_12.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Stripe 19 qs</p>
@@ -260,7 +278,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Yoke 19 qs</p>
@@ -273,7 +291,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
