--- a/home.html
+++ b/home.html
@@ -58,8 +58,8 @@
 			                </ul>
 	                    </div>
 	                    <div class="search">
-	                        <input type="text" value="Search">
-	                        <input class="f-right" type="submit" value="">
+	                        <input type="text" value="Search" />
+	                        <input class="f-right" type="submit" value="" />
 	                    </div>
 					</div>
 	                <div class="yellow-banner">
@@ -141,7 +141,7 @@
 								<figure class="shop-item mark">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_09.jpg" alt="">
+											<img src="img/cart_09.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Sleeve spring suit</p>
@@ -154,7 +154,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
@@ -168,7 +168,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -181,7 +181,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Synergy 2mm back zip</p>
@@ -194,7 +194,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_09.jpg" alt="">
+											<img src="img/cart_09.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Synery 2mm</p>
@@ -207,7 +207,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_12.jpg" alt="">
+											<img src="img/cart_12.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Surf yoke 19 qs</p>
@@ -232,7 +232,7 @@
 								<figure class="shop-item mark">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_09.jpg" alt="">
+											<img src="img/cart_09.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Sleeve spring suit</p>
@@ -245,7 +245,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
@@ -259,7 +259,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -283,7 +283,7 @@
 								<figure class="shop-item mark">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_09.jpg" alt="">
+											<img src="img/cart_09.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Sleeve spring suit</p>
@@ -296,7 +296,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
@@ -310,7 +310,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -338,12 +338,12 @@
 				<section class="insta-block">
 		            <h3>Instagram feed:<span> #surfhouse </span></h3>
 		            <ul>
-		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
-		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
-		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
-		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
-		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
-		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
+		                <li><a href="#"><img src="img/home_13.jpg" alt="some image" /></a></li>
+		                <li><a href="#"><img src="img/home_13.jpg" alt="some image" /></a></li>
+		                <li><a href="#"><img src="img/home_13.jpg" alt="some image" /></a></li>
+		                <li><a href="#"><img src="img/home_13.jpg" alt="some image" /></a></li>
+		                <li><a href="#"><img src="img/home_13.jpg" alt="some image" /></a></li>
+		                <li><a href="#"><img src="img/home_13.jpg" alt="some image" /></a></li>
 		            </ul>
 		        </section>
 			</main>
