--- a/productpage.html
+++ b/productpage.html
@@ -59,7 +59,7 @@
 	                    </div>
 	                    <div class="search">
 	                        <input type="text" value="Search">
-	                        <input class="f-right" type="submit" value="">
+	                        <input class="f-right" type="submit" value="" />
 	                    </div>
 					</div>
 				</div>
@@ -144,38 +144,38 @@
 					<div class="product-info clearfix">
 						<div class="product-photos f-left">
 						    <div class="product-big-photo">
-						    	<img src="img/product-page.jpg" alt="">
+						    	<img src="img/product-page.jpg" alt="some image" />
 						    </div>
 				            <div class="product-thumbs-block">
 				                <ul class="product-thumbs">
 				                	<li class="product-thumb">
-				                		<a href="">
-				                			<img src="img/product-thumb.jpg" alt="">
+				                		<a href="#">
+				                			<img src="img/product-thumb.jpg" alt="some image" />
 					                	</a>
 					                </li>
 				                	<li class="product-thumb">
-				                		<a href="">
-				                			<img src="img/product-thumb.jpg" alt="">
+				                		<a href="#">
+				                			<img src="img/product-thumb.jpg" alt="some image" />
 					                	</a>
 					                </li>
 					                <li class="product-thumb">
-				                		<a href="">
-				                			<img src="img/product-thumb.jpg" alt="">
+				                		<a href="#">
+				                			<img src="img/product-thumb.jpg" alt="some image" />
 					                	</a>
 					                </li>
 					                <li class="product-thumb">
-				                		<a href="">
-				                			<img src="img/product-thumb.jpg" alt="">
+				                		<a href="#">
+				                			<img src="img/product-thumb.jpg" alt="some image" />
 					                	</a>
 					                </li>
 					                <li class="product-thumb">
-				                		<a href="">
-				                			<img src="img/product-thumb.jpg" alt="">
+				                		<a href="#">
+				                			<img src="img/product-thumb.jpg" alt="some image" />
 					                	</a>
 					                </li>
 					                <li class="product-thumb">
-				                		<a href="">
-				                			<img src="img/product-thumb.jpg" alt="">
+				                		<a href="#">
+				                			<img src="img/product-thumb.jpg" alt="some image" />
 					                	</a>
 					                </li>
 					            </ul>
@@ -215,47 +215,47 @@
 				        		<ul>
 				        			<li>
 				        				<label for="size-25" class="product-radio">
-                                         	<input id="size-25" name="size" type="radio" value="25">25
+                                         	<input id="size-25" name="size" type="radio" value="25" />25
                                      	</label>
 				        			</li>
 				        			<li>
 				        				<label for="size-26" class="product-radio">
-                                         	<input id="size-26" name="size" type="radio" value="26" checked>26
+                                         	<input id="size-26" name="size" type="radio" value="26" checked />26
                                      	</label>
 				        			</li>
 				        			<li>
 				        				<label for="size-27" class="product-radio">
-                                         	<input id="size-27" name="size" type="radio" value="27">27
+                                         	<input id="size-27" name="size" type="radio" value="27" />27
                                      	</label>
 				        			</li>
 				        			<li>
 				        				<label for="size-28" class="product-radio">
-                                         	<input id="size-28" name="size" type="radio" value="28">28
+                                         	<input id="size-28" name="size" type="radio" value="28" />28
                                      	</label>
 				        			</li>
 				        			<li>
 				        				<label for="size-29" class="product-radio">
-                                         	<input id="size-29" name="size" type="radio" value="29">29
+                                         	<input id="size-29" name="size" type="radio" value="29" />29
                                      	</label>
 				        			</li>
 				        			<li>
 				        				<label for="size-30" class="product-radio">
-                                         	<input id="size-30" name="size" type="radio" value="30">30
+                                         	<input id="size-30" name="size" type="radio" value="30" />30
                                      	</label>
 				        			</li>
 				        			<li>
 				        				<label for="size-31" class="product-radio">
-                                         	<input id="size-31" name="size" type="radio" value="31">31
+                                         	<input id="size-31" name="size" type="radio" value="31" />31
                                      	</label>
 				        			</li>
 				        			<li>
 				        				<label for="size-32" class="product-radio">
-                                         	<input id="size-32" name="size" type="radio" value="32">32
+                                         	<input id="size-32" name="size" type="radio" value="32" />32
                                      	</label>
 				        			</li>
 				        			<li>
 				        				<label for="size-33" class="product-radio">
-                                         	<input id="size-33" name="size" type="radio" value="33">33
+                                         	<input id="size-33" name="size" type="radio" value="33" />33
                                      	</label>
 				        			</li>
 				        		</ul>
@@ -265,13 +265,13 @@
 				        		<h2>Length</h2>
 				        		<ul>
 				        			<li>
-				        				<label for="size-32" class="product-radio">
-                                         	<input id="size-32" name="size" type="radio" value="32">32
+				        				<label for="length-32" class="product-radio">
+                                         	<input id="length-32" name="length" type="radio" value="32" />32
                                      	</label>
 				        			</li>
 				        			<li>
-				        				<label for="size-34" class="product-radio">
-                                         	<input id="size-34" name="size" type="radio" value="34">34
+				        				<label for="length-34" class="product-radio">
+                                         	<input id="length-34" name="length" type="radio" value="34" />34
                                      	</label>
 				        			</li>
 				        		</ul>
@@ -280,14 +280,14 @@
 				        	<div class="product-add clearfix">
 				        		<form class="product-quantity f-left">
 				        			<p>Quantity:</p>
-			                	    <input type="text" value="1">
+			                	    <input type="text" value="1" />
 			                    	<button class="product-quantity-add">+</button>
 			                	</form>
 			                	<button class="product-button-add f-left">Add to cart</button>
 			                	<ul class="add-list f-right">
-			                		<li><a href="">Add to Wishlist</a></li>
-			                		<li><a href="">Add to Compare</a></li>
-			                		<li><a href="">Email to a Friend</a></li>
+			                		<li><a href="#">Add to Wishlist</a></li>
+			                		<li><a href="#">Add to Compare</a></li>
+			                		<li><a href="#">Email to a Friend</a></li>
 			                	</ul>
 				        	</div>
 				        </div>
@@ -330,7 +330,7 @@
 								<figure class="shop-item mark">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_09.jpg" alt="">
+											<img src="img/cart_09.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Sleeve spring suit</p>
@@ -343,7 +343,7 @@
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
@@ -357,7 +357,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -370,7 +370,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
@@ -392,7 +392,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Oq scallop solid</p>
@@ -405,7 +405,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/cart_12.jpg" alt="">
+											<img src="img/cart_12.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Stripe 19 qs</p>
@@ -418,7 +418,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Yoke 19 qs</p>
@@ -431,7 +431,7 @@
 								<figure class="shop-item">
 									<a href="#">
 										<span class="shop-item-img">
-											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
