--- a/shop-cat-gridx3.html
+++ b/shop-cat-gridx3.html
@@ -58,8 +58,8 @@
 			                </ul>
 	                    </div>
 	                    <div class="search">
-	                        <input type="text" value="Search">
-	                        <input class="f-right" type="submit" value="">
+	                        <input type="text" value="Search" />
+	                        <input class="f-right" type="submit" value="" />
 	                    </div>
 					</div>
 				</div>
@@ -150,7 +150,7 @@
 									<option>Position 2</option>
 								</select>
 							</span>
-							<a href="" class="fa fa-long-arrow-up"></a>
+							<a href="#" class="fa fa-long-arrow-up"></a>
 						</div>
 						<div class="view">
 							View as:
@@ -182,7 +182,7 @@
 						<figure class="shop-item mark">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/cart_09.jpg" alt="">
+									<img src="img/cart_09.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Sleeve spring suit</p>
@@ -195,7 +195,7 @@
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Salty dayz</p>
@@ -209,7 +209,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Cheeky jane</p>
@@ -222,7 +222,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Synergy 2mm back zip</p>
@@ -235,7 +235,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/cart_09.jpg" alt="">
+									<img src="img/cart_09.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Synery 2mm</p>
@@ -248,7 +248,7 @@
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/cart_12.jpg" alt="">
+									<img src="img/cart_12.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Surf yoke 19 qs</p>
@@ -262,7 +262,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Oq scallop solid</p>
@@ -275,7 +275,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/cart_12.jpg" alt="">
+									<img src="img/cart_12.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Stripe 19 qs</p>
@@ -288,7 +288,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Yoke 19 qs</p>
@@ -301,7 +301,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Oq scallop solid</p>
@@ -314,7 +314,7 @@
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Stripe 19 qs</p>
@@ -328,7 +328,7 @@
 						<figure class="shop-item mark">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Yoke 19 qs</p>
@@ -342,7 +342,7 @@
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Oq scallop solid</p>
@@ -356,7 +356,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Stripe 19 qs</p>
@@ -369,7 +369,7 @@
 						<figure class="shop-item">
 							<a href="#">
 								<span class="shop-item-img">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="some image" />
 								</span>
 								<figcuption>
 									<p class="goods-name f-left">Yoke 19 qs</p>
@@ -389,7 +389,7 @@
 									<option>Position 2</option>
 								</select>
 							</span>
-							<a href="" class="fa fa-long-arrow-up"></a>
+							<a href="#" class="fa fa-long-arrow-up"></a>
 						</div>
 						<div class="view">
 							View as:
